--- a/addition-react.html
+++ b/addition-react.html
@@ -47,7 +47,7 @@
                     return (
                         <div>
                             <div id="problem">{this.state.num1} + {this.state.num2}</div>
-                            <input type="text" value={this.state.response} onChange={this.updateResponse} onKeyPress={this.inputKeyPress} />
+                            <input type="number" value={this.state.response} onChange={this.updateResponse} onKeyPress={this.inputKeyPress} />
                             <div>Score: {this.state.score}</div> 
                         </div>
                     );
