--- a/addition-js.html
+++ b/addition-js.html
@@ -19,7 +19,7 @@
                 let answer = num1 + num2;
 
                 let n1 = document.querySelector("#num1")
-                n1.innerHTML = `${num1}`;
+                n1.innerHTML = num1;
 
                 let n2 = document.querySelector("#num2");
                 n2.innerHTML = `${num2}`;
